# smart_data

./: README.md  pyproject.toml  setup.cfg
smart_data/: include.py
tests/: test_include.py
