[metadata]
name = smart_data_pkoscielny
version = 0.1.0
author = Pawel Koscielny
license_file = LICENSE
description = Smart comparing data for tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pkoscielny/smart_data
project_urls =
    Bug Tracker = https://github.com/pkoscielny/smart_data/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6.9

[flake8]
max_line_length = 120
exclude = .git,__pycache__
